--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>TP API</title>
 </head>
 <body>
+    <h1 class="underline">
+        Test
+    </h1>
     <form action="/login" method="post">
         <label for="email">Email:</label><br>
         <input type="email" id="email" name="email"><br>
