Ajout de la dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
             </form>
         </div>
     </div>
-    <footer class="bg-gray-50">
+    <footer>
       <div class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8">
         <div class="sm:flex sm:items-center sm:justify-between">
           <div class="flex justify-cente sm:justify-start">
